<resources>
    <string name="app_name">DevShowcase</string>
    <string name="menu_news">News</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_profile">Profile</string>

    <string name="back_button">Back Button</string>
    <string name="cancel">Cancel</string>
    <string name="read_more">Read more</string>
    <string name="search_city">Search City</string>
    <string name="no_saved_weathers">No Saved Weathers</string>
    <string name="temp">%1$s°</string>
    <string name="minTemp">Min: %1$s°</string>
    <string name="maxTemp">Max: %1$s°</string>
    <string name="now">Now</string>
    <string name="forecast_title">Forecast in 3-hour intervals</string>
    <string name="degree">°</string>
    <string name="percent">%</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels Like</string>
    <string name="temperature_index">Temperature Index</string>
    <string name="wind">Wind</string>
    <string name="add">Add</string>
    <string name="copyright">Copyright</string>
    <string name="contact_me">Contact Me</string>
    <string name="powered_by">Powered By</string>
    <string name="these_apis">These APIs make our app work.</string>
    <string name="api_ninjas">Api Ninjas</string>
    <string name="api_ninjas_subtitle">Real-time data for weather, finance, and more.</string>
    <string name="finlight">Finlight</string>
    <string name="finlight_subtitle">Financial News API and AI-powered insights</string>
    <string name="photon_komoot">Photon Komoot</string>
    <string name="photon_komoot_subtitle">Search as you type with OpenStreetMap</string>
    <string name="lets_work_together">Let\'s Work Together</string>
    <string name="reach_out_via_email">Reach out via email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="prefer_other_method">Prefer Other Method?</string>
    <string name="email_app_not_found">Please contact %1$s manually.\nEmail Copied</string>
    <string name="email">Email</string>
    <string name="linkedin">Linkedin</string>
</resources>
