<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_news_item"
        android:icon="@drawable/ic_news_black_24dp"
        android:title="@string/menu_news"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/an_primary_variant"/>
    <item
        android:id="@+id/menu_weather_item"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/menu_weather"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/an_primary_variant"/>
    <item
        android:id="@+id/menu_profile_item"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_profile"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/an_primary_variant"/>
</menu>
