<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_rounded_an_primary_variant"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_work_together"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/reach_out_via_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subject_edit_layout"
        style="@style/customTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_edit_layout"
        style="@style/customTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject_edit_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_multiline_height"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:backgroundTint="@color/search_bar_dark"
        android:text="@string/send_email"
        app:layout_constraintTop_toBottomOf="@id/message_edit_layout" />

    <TextView
        android:id="@+id/secondary_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/prefer_other_method"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_button" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@id/secondary_title_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linkedin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/an_text_placeholder"
            android:padding="@dimen/spacing_small">

            <ImageView
                android:id="@+id/linkedin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_linkedin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/linkedin_text"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:text="@string/linkedin"
                android:textSize="@dimen/text_large"
                app:layout_constraintBottom_toBottomOf="@id/linkedin_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/linkedin_image"
                app:layout_constraintTop_toTopOf="@id/linkedin_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
