<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/spacing_medium">

        <TextView
            android:id="@+id/weather_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/menu_weather"
            android:textSize="@dimen/text_extra_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.paopeye.devshowcase.component.search_bar_view.SearchBarView
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_city"
            android:imeOptions="actionSearch"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/weather_title_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit" />

        <TextView
            android:id="@+id/empty_weather_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_saved_weathers"
            android:textAlignment="center"
            android:textSize="@dimen/text_title"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
