<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/an_highlight">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:background="@drawable/bg_circular_back_button"
        android:contentDescription="@string/back_button"
        android:elevation="4dp"
        android:padding="@dimen/spacing_small"
        android:scaleType="center"
        android:src="@drawable/ic_back_arrow_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.333" />

    <ImageView
        android:id="@+id/news_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height_extra_large"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_news_title"
        android:paddingBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@id/image_bottom_guideline">

        <TextView
            android:id="@+id/news_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_medium"
            android:lines="3"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:animateLayoutChanges="true"
        android:background="@color/an_primary_variant_2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_bottom_guideline"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/circular_image_view"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                android:background="@color/an_primary_variant"
                android:src="@drawable/person_sitting_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circularShapeableImageView" />

            <TextView
                android:id="@+id/news_author_text"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circular_image_view"
                app:layout_constraintTop_toTopOf="@id/circular_image_view"
                tools:text="@string/menu_news" />

            <TextView
                android:id="@+id/news_date_text"
                android:layout_width="@dimen/spacing_none"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:textColor="@color/an_text_secondary"
                app:layout_constraintBottom_toBottomOf="@id/circular_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circular_image_view"
                app:layout_constraintTop_toBottomOf="@id/news_author_text"
                tools:text="@string/no_saved_weathers" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/news_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_none"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/an_primary_variant_2"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/header_layout"
            app:layout_constraintBottom_toTopOf="@id/read_more_button">

            <TextView
                android:id="@+id/news_summary_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_extra_large"
                android:textColor="@color/an_text_primary"
                android:textSize="@dimen/text_large"
                tools:text="lorem ipsum" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/read_more_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/search_bar_dark"
            android:drawableEnd="@drawable/ic_share_24dp"
            android:text="@string/read_more"
            android:layout_marginVertical="@dimen/spacing_extra_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/read_more" />

        <ProgressBar
            android:id="@+id/button_loading"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
